# yellow-client

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: fetch_and_render_asset.py  generate_asset.py  list_generated_assets.py
examples/cli/: fetch_asset.sh  generate_asset.sh  install_yellow_client.sh  list_generated_assets.sh
yellow/client/: __init__.py
yellow/client/advanced/: auth.py  retopology.py  sculpt.py
yellow/client/api/auth/: auth_token_create.py
yellow/client/api/retopology/: retopology_characters_create_create.py  retopology_characters_fetch_retrieve.py  retopology_characters_list.py  retopology_characters_status_retrieve.py
yellow/client/api/sculpt/: sculpt_characters_archive_partial_update.py  (+6 more)
yellow/client/cli/: __init__.py  auth.py  common.py  retopology.py  sculpt.py
yellow/client/models/: __init__.py  auth_token.py  auth_token_request.py  character_feedback.py  character_feedback_request.py  character_generation.py  character_generation_status.py  character_retopology.py  character_retopology_generation_status.py  character_spec.py  character_spec_request.py  character_variant_generation_status.py  error_message.py  file_format_enum.py  file_upload_request.py  gender_enum.py  genesis_enum.py  paginated_character_generation_list.py  paginated_character_retopology_list.py  retopology_characters_list_state_item.py  rig_type_enum.py  sculpt_characters_fetch_retrieve_file_format.py  sculpt_characters_fetch_retrieve_rig_type.py  sculpt_characters_list_gender_item.py  sculpt_characters_list_state_item.py  uuid.py
